force-app/main/default/objects/animalos__Enforcement_Action__c/animalos__Enforcement_Action__c.object-meta.xml
<CustomObject>
    <label>Enforcement Action</label>
    <nameField>
        <displayFormat>EFA{00000}</displayFormat>
        <label>Enforcement Action ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enforcement Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>