force-app/main/default/objects/animalos__Enforcement_Action__c/fields/animalos__Action_Type__c.field-meta.xml
<CustomField>
    <fullName>animalos__Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Verbal warning/direction</fullName>
            </value>
            <value>
                <fullName>Section 24N written direction</fullName>
            </value>
            <value>
                <fullName>Formal Caution</fullName>
            </value>
            <value>
                <fullName>Penalty Infringement Notice (PIN)</fullName>
            </value>
            <value>
                <fullName>Prosecution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>