force-app/main/default/objects/animalos__Enforcement_Action__c/fields/animalos__Contact__c.field-meta.xml
<CustomField>
    <fullName>animalos__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enforcement Actions</relationshipLabel>
    <relationshipName>Enforcement_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>