force-app/main/default/objects/animalos__Enforcement_Action__c/fields/animalos__Court_Information__c.field-meta.xml
<CustomField>
    <fullName>animalos__Court_Information__c</fullName>
    <label>Court Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>