force-app/main/default/objects/animalos__Enforcement_Action__c/fields/animalos__Date_Of_Action__c.field-meta.xml
<CustomField>
    <fullName>animalos__Date_Of_Action__c</fullName>
    <label>Date Of Action</label>
    <type>Date</type>
</CustomField>