force-app/main/default/objects/animalos__Enforcement_Action__c/fields/animalos__Job__c.field-meta.xml
<CustomField>
    <fullName>animalos__Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>animalos__Job__c</referenceTo>
    <relationshipLabel>Enforcement Actions</relationshipLabel>
    <relationshipName>Enforcement_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>