force-app/main/default/objects/animalos__Enforcement_Action__c/fields/animalos__Legal_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>animalos__Legal_Reference_Number__c</fullName>
    <label>Legal Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>