force-app/main/default/objects/animalos__Enforcement_Action__c/fields/animalos__Notes__c.field-meta.xml
<CustomField>
    <fullName>animalos__Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>