force-app/main/default/objects/animalos__Enforcement_Action__c/fields/animalos__Prosecuting_Authority__c.field-meta.xml
<CustomField>
    <fullName>animalos__Prosecuting_Authority__c</fullName>
    <label>Prosecuting Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RSPCA</fullName>
            </value>
            <value>
                <fullName>Police</fullName>
            </value>
            <value>
                <fullName>DPP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>